# django-primitives

./: .gitignore  AUDIT_LOG.md  CLAUDE.md  PLANNING_INVENTORY.md  README.md  layers.yaml
testbed/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  test_bob_diver_flow.py
testbed/.github/workflows/: ci.yml
testbed/docs/interface_analysis/: generated_docs.json  interface_analysis.json
testbed/planning/tasks/: T-105-settlement-record-model.md  T-119-eligibility-override-model.md
testbed/primitives_testbed/: __init__.py  admin.py  impersonation.py  mixins.py  models.py  settings.py  urls.py  views.py  wsgi.py
testbed/primitives_testbed/checkin/: __init__.py  apps.py  exceptions.py  services.py  validators.py
testbed/primitives_testbed/clinic/: __init__.py  exceptions.py  services.py  urls.py  views.py
testbed/primitives_testbed/diveops/: ARCHITECTURE.md  ARCHITECTURE_CERTIFICATION.md  accounts.py  admin.py  apps.py  audit.py  cancellation_policy.py  commission_service.py  context_processors.py  customer_urls.py  customer_views.py  decisioning.py  dive_profile.py  document_backup.py  document_forms.py  document_metadata.py  document_views.py  eligibility_service.py  email_service.py  exceptions.py  forms.py  help_views.py  integrations.py  media_link_service.py  models.py  pricing_service.py  public_urls.py  public_views.py  selectors.py  services.py  settlement_service.py  staff_urls.py  staff_views.py  thumbnails.py  validators.py
testbed/primitives_testbed/store/: apps.py  (+6 more)
testbed/scripts/: add_party.py  capture_help_screenshots.py  crawl_interface.py
testbed/static/: manifest.json  sw.js
testbed/templates/: index.html
testbed/tests/: __init__.py  conftest.py  test_checkin.py  test_checkin_e2e.py  test_clinic.py  test_concurrency.py  test_deco_segment_converter.py  test_deco_validation.py  test_dive_assignment_status.py  test_dive_log_constraints.py  test_dive_log_overlay.py  test_dive_log_verification.py  test_dive_plan_lifecycle.py  test_dive_plan_locking.py  test_dive_plan_validator.py  test_dive_results_logging.py  test_integration.py  test_invoice_printing.py  test_invoice_printing_e2e.py  test_invoicing.py  test_invoicing_e2e.py  test_pricing.py
(+718 files in other folders)
